--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,6 +1,16 @@
 :root {
   /* Add your custom color scheme */
-  --primary-color: darkcyan;
+  --primary-color: #FEFEFE;
+  --secondary-color: #4E888F;
+  --accent-color: #000000;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--secondary-color);
 }
 
 .edgeless {
