--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,10 +6,7 @@
 }
 
 body {
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin: 0;
   background-color: var(--secondary-color);
 }
 
