--- a/frontend/src/components/form/Form.css
+++ b/frontend/src/components/form/Form.css
@@ -6,7 +6,9 @@ form {
   border-radius: 10px;
   padding: 1em;
   max-width: 400px;
+  width:100%;
   font-family: sans-serif;
+  box-sizing: border-box;
 }
 
 form span.formError {
@@ -38,7 +40,6 @@ input,
 select {
   border-radius: 5px;
   padding: 0.5em 1em;
-  min-width: 300px;
 }
 
 form button {
