--- a/frontend/src/components/item/Item.css
+++ b/frontend/src/components/item/Item.css
@@ -1,6 +1,6 @@
 .itemContainer {
   display: grid;
-  grid-template-columns: 2fr 1fr;
+  grid-template-columns: 2fr minmax(150px, auto);
   grid-template-rows: 1em auto auto;
   gap: 0.5em;
   background-color: white;
@@ -12,15 +12,23 @@
 /* Item Name */
 .itemContainer h3 {
   margin: 0;
-  grid-row: 1/3;
+  grid-row: 1/2;
   grid-column: 1/2;
 }
 
 /* Item Description */
 .itemContainer p {
-  grid-row: 2/4;
+  grid-row: 2 / span all;
   grid-column: 1/2;
   margin: 0;
+}
+
+.qtyGroups {
+  grid-column: 2/3;
+  grid-row: 1/3;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
 }
 
 /* Item container buttons (Add 2 cart and Save Changes) */
@@ -30,7 +38,7 @@
   border: none;
   border-radius: 5px;
   color: white;
-  grid-column: 2/4;
+  grid-column: 2 /3;
   grid-row: 3/4;
   min-width: 150px;
   align-self: flex-end;
@@ -44,6 +52,11 @@
 @media (max-width: 768px) {
   .itemContainer {
     display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 500px) {
+  .qtyGroups {
     flex-direction: column;
   }
 }
