--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,7 @@
   /* Add your custom color scheme */
   --primary-color: #FEFEFE;
   --secondary-color: #4E888F;
+  --secondary-color-light: #6ba7ae;
   --accent-color: #000000;
 }
 
