--- a/frontend/src/components/form/InlayInputBox.css
+++ b/frontend/src/components/form/InlayInputBox.css
@@ -5,16 +5,20 @@
   padding: 0.5em;
   border-radius: 5px;
   border: 1px solid gray;
-  box-sizing: border-box;
 }
 
 .inlayInput:has(input:focus) {
   outline: 1px solid black;
 }
 
+.inlayInput:has(input:disabled) {
+  filter:brightness(90%);
+  border:none;
+}
+
 .inlayInput span {
   color: gray;
-  font-size: small;
+  font-size: 0.67rem;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
 }
