Added fields to order confirmation modal and ran format

--- a/frontend/src/components/form/InlayInputBox.css
+++ b/frontend/src/components/form/InlayInputBox.css
@@ -29,3 +29,10 @@
   outline: none;
   padding: 0;
 }
+
+.inlayInput > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
