--- a/frontend/src/components/misc/Modal.css
+++ b/frontend/src/components/misc/Modal.css
@@ -26,14 +26,15 @@
   position: relative;
   margin: auto;
   margin-top: 10%;
-  max-width: 80%;
-  background-color: var(--primary-color);
+  max-width: 82%;
+  background-color: hsl(0, 0%, 89%);
   border-radius: 15px;
   border: 2px solid var(--secondary-color);
   padding: 0.5em;
   z-index: 20;
   color: black;
 }
+
 .modal .modal-content > div {
   display: flex;
   flex-direction: column;
@@ -43,10 +44,21 @@
 
 .modal .modal-cancel {
   position: sticky;
-  left: 0;
   top: 0;
+  left: 100%;
   color: var(--secondary-color);
   background-color: transparent;
   border: none;
   font-weight: bold;
+  width: 30px;
+  height: auto;
+  aspect-ratio: 1/1;
+  opacity: 0.75;
+  transition: all 100ms ease-in-out;
+  border-radius: 10px;
+}
+
+.modal .modal-cancel:hover {
+  background-color: var(--secondary-color);
+  color: white;
 }
