--- a/frontend/src/components/admin/AdminOrderModal.css
+++ b/frontend/src/components/admin/AdminOrderModal.css
@@ -31,12 +31,12 @@
 }
 
 .adminOrderModal .userList {
-  /* background-color: var(--secondary-color); */
   display: flex;
   flex-direction: column;
-  /* padding: 2px; */
   gap: 2px;
   border-radius: 10px;
+  max-height: 400px;
+  overflow-y: auto;
 }
 
 .adminOrderModal .highlightButton {
