Initial Commit for Past User Orders page

--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -22,6 +22,11 @@
   width: auto;
 }
 
+a.header-left {
+  text-decoration: none;
+  color: black;
+}
+
 .header-title {
   font-size: 1rem;
   font-weight: bold;
