--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0.5rem 1rem;
-  color: var(--primary-color);
+  color: black;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
 }
 
