--- a/frontend/src/components/form/Form.css
+++ b/frontend/src/components/form/Form.css
@@ -117,9 +117,9 @@ form button:hover {
 }
 
 .toggle.active {
-  background-color: #007bff;
+  background-color: #0072ed;
   color: white;
-  border-color: #007bff;
+  border-color: #0072ed;
 }
 
 .inline-label {
