--- a/frontend/src/components/item/PriceQtyGroup.css
+++ b/frontend/src/components/item/PriceQtyGroup.css
@@ -24,7 +24,7 @@
   grid-column: 2/3;
   display: grid;
   grid-template-columns: auto 1fr auto;
-  color: gray;
+  color: #676767;
 }
 
 .helpText > div {
